add: generation without prior

--- a/notebooks/unclip.ipynb
+++ b/notebooks/unclip.ipynb
@@ -12,8 +12,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-19T18:46:52.398148Z",
-     "end_time": "2023-10-19T18:46:56.000252Z"
+     "start_time": "2023-10-19T21:28:52.896585Z",
+     "end_time": "2023-10-19T21:28:56.345614Z"
     }
    }
   },
@@ -27,7 +27,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "807b0651a57e4987866772354174ac19"
+       "model_id": "7acbfe77405e42428db9345be344c649"
       }
      },
      "metadata": {},
@@ -40,8 +40,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-19T18:46:56.002252Z",
-     "end_time": "2023-10-19T18:47:06.981529Z"
+     "start_time": "2023-10-19T21:28:56.347619Z",
+     "end_time": "2023-10-19T21:28:58.062208Z"
     }
    }
   },
@@ -77,33 +77,23 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-19T18:47:06.997525Z",
-     "end_time": "2023-10-19T18:47:07.134530Z"
+     "start_time": "2023-10-19T21:28:58.065204Z",
+     "end_time": "2023-10-19T21:28:58.204209Z"
     }
    }
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "A matching Triton is not available, some optimizations will not be enabled.\n",
-      "Error caught was: No module named 'triton'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pipe.enable_xformers_memory_efficient_attention()\n",
     "pipe.enable_model_cpu_offload()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-19T18:47:07.135527Z",
-     "end_time": "2023-10-19T18:47:09.257047Z"
+     "start_time": "2023-10-19T21:28:58.203206Z",
+     "end_time": "2023-10-19T21:28:58.339203Z"
     }
    }
   },
@@ -117,11 +107,117 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "63d83a3bf8c84652a6d525c9ddac5cad"
+       "model_id": "9b6e4536c92d4e34828b50457bf8b1ea"
       }
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n",
+      "torch.Size([1, 1280]) torch.Size([1, 9, 64, 64])\n"
+     ]
     }
    ],
    "source": [
@@ -133,8 +229,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-19T18:47:09.259053Z",
-     "end_time": "2023-10-19T18:47:28.440300Z"
+     "start_time": "2023-10-19T21:28:58.233205Z",
+     "end_time": "2023-10-19T21:29:27.253143Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-10-19T21:29:27.254147Z",
+     "end_time": "2023-10-19T21:29:27.268143Z"
     }
    }
   }
