--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -13,8 +13,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-19T21:27:16.934269Z",
-     "end_time": "2023-10-19T21:27:20.202267Z"
+     "start_time": "2023-10-19T23:02:26.534383Z",
+     "end_time": "2023-10-19T23:02:29.790341Z"
     }
    }
   },
@@ -28,8 +28,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-19T21:27:20.203267Z",
-     "end_time": "2023-10-19T21:27:20.217276Z"
+     "start_time": "2023-10-19T23:02:29.792342Z",
+     "end_time": "2023-10-19T23:02:29.806341Z"
     }
    }
   },
@@ -51,8 +51,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-19T21:27:20.218277Z",
-     "end_time": "2023-10-19T21:27:20.234519Z"
+     "start_time": "2023-10-19T23:02:29.806341Z",
+     "end_time": "2023-10-19T23:02:29.824342Z"
     }
    }
   },
@@ -66,7 +66,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "51019fcb815c4f9eade6d1f5319dc356"
+       "model_id": "94c3f843c7fe4e099ac3ccb810d6e8b6"
       }
      },
      "metadata": {},
@@ -79,8 +79,201 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-19T21:27:20.233518Z",
-     "end_time": "2023-10-19T21:27:21.674480Z"
+     "start_time": "2023-10-19T23:02:29.823341Z",
+     "end_time": "2023-10-19T23:02:31.297341Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Downloading (…)ain/model_index.json:   0%|          | 0.00/383 [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "e203e8c92b414678a2df470ddc2c3d6c"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\site-packages\\huggingface_hub\\file_download.py:133: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\Alexey\\.cache\\huggingface\\hub. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
+      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to see activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
+      "  warnings.warn(message)\n",
+      "movq\\diffusion_pytorch_model.safetensors not found\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "Fetching 13 files:   0%|          | 0/13 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "0dec2d687f0b483a8b5425a7d54b7403"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Downloading (…)433/movq/config.json:   0%|          | 0.00/660 [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "08342f3765e4442ab02d12c194f918f7"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Downloading (…)b13f475433/README.md:   0%|          | 0.00/5.69k [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "65b914ee0640430a8decad3be63a9fa2"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Downloading (…)_encoder/config.json:   0%|          | 0.00/662 [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "09f983c0a48b47c7985fd055152a830a"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Downloading (…)cial_tokens_map.json:   0%|          | 0.00/280 [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "34343b37065b495389e5a36f22d61a9e"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Downloading (…)cheduler_config.json:   0%|          | 0.00/321 [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "173abb9214334dcebb9114b64f922f48"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Downloading (…)okenizer_config.json:   0%|          | 0.00/418 [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "2186bd8503e24a70af58a0b537add4a9"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Downloading (…)433/unet/config.json:   0%|          | 0.00/1.68k [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "771f81ed33a941feb773edfe62019a0c"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Downloading (…)tencepiece.bpe.model:   0%|          | 0.00/5.07M [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "34269a33677c42e4b8d108ae7c4df035"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Downloading (…)nizer/tokenizer.json:   0%|          | 0.00/17.1M [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "1c0b4a2302374159b0e136c6a670060a"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Downloading pytorch_model.bin:   0%|          | 0.00/2.24G [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "6c17a749ad4c4cc29ce030f54a75bee1"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Downloading (…)on_pytorch_model.bin:   0%|          | 0.00/271M [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "ab81928141e24e999903fa2bef49a782"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Downloading (…)on_pytorch_model.bin:   0%|          | 0.00/4.91G [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "2a41176ad239461596112043ff638b64"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "AutoPipelineForInpainting.from_pretrained('kandinsky-community/kandinsky-2-1-inpaint')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
     }
    }
   },
@@ -116,8 +309,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-19T21:27:21.678478Z",
-     "end_time": "2023-10-19T21:27:21.829478Z"
+     "start_time": "2023-10-19T23:02:31.300342Z",
+     "end_time": "2023-10-19T23:02:31.437341Z"
     }
    }
   },
@@ -131,8 +324,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-19T21:27:21.817481Z",
-     "end_time": "2023-10-19T21:27:21.940477Z"
+     "start_time": "2023-10-19T23:02:31.438342Z",
+     "end_time": "2023-10-19T23:02:31.575339Z"
     }
    }
   },
@@ -141,30 +334,26 @@
    "execution_count": 7,
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'CombinedPipeline' object has no attribute 'prior_pipe'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[7], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43mpipe\u001B[49m\u001B[43m(\u001B[49m\u001B[43msource_image\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtarget_image\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[1;32m~\\anaconda3\\envs\\hands-tracking\\lib\\site-packages\\torch\\utils\\_contextlib.py:115\u001B[0m, in \u001B[0;36mcontext_decorator.<locals>.decorate_context\u001B[1;34m(*args, **kwargs)\u001B[0m\n\u001B[0;32m    112\u001B[0m \u001B[38;5;129m@functools\u001B[39m\u001B[38;5;241m.\u001B[39mwraps(func)\n\u001B[0;32m    113\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mdecorate_context\u001B[39m(\u001B[38;5;241m*\u001B[39margs, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs):\n\u001B[0;32m    114\u001B[0m     \u001B[38;5;28;01mwith\u001B[39;00m ctx_factory():\n\u001B[1;32m--> 115\u001B[0m         \u001B[38;5;28;01mreturn\u001B[39;00m func(\u001B[38;5;241m*\u001B[39margs, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs)\n",
-      "File \u001B[1;32mC:\\Folder\\WorkProjects\\Workspace\\image-merging\\models\\combined_pipeline.py:135\u001B[0m, in \u001B[0;36mCombinedPipeline.__call__\u001B[1;34m(self, source_image, target_image, mask_image, num_inference_steps, guidance_scale, num_images_per_prompt, height, width, strength, num_maps_per_mask, generator, output_type, callback, callback_steps, return_dict)\u001B[0m\n\u001B[0;32m    123\u001B[0m device \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_execution_device\n\u001B[0;32m    124\u001B[0m \u001B[38;5;66;03m# source_image_embeds, source_negative_image_embeds = self.prior_pipe(\u001B[39;00m\n\u001B[0;32m    125\u001B[0m \u001B[38;5;66;03m#     'a photograph of a human wearing specific clothes',\u001B[39;00m\n\u001B[0;32m    126\u001B[0m \u001B[38;5;66;03m#     source_image,\u001B[39;00m\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m    133\u001B[0m \u001B[38;5;66;03m#     negative_prompt='a picture of background behind the human'\u001B[39;00m\n\u001B[0;32m    134\u001B[0m \u001B[38;5;66;03m# ).to_tuple()\u001B[39;00m\n\u001B[1;32m--> 135\u001B[0m source_image_embeds, source_negative_image_embeds \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mencode_image\u001B[49m\u001B[43m(\u001B[49m\u001B[43msource_image\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    136\u001B[0m \u001B[43m                                                                      \u001B[49m\u001B[43mdevice\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    137\u001B[0m \u001B[43m                                                                      \u001B[49m\u001B[43mbatch_size\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    138\u001B[0m \u001B[43m                                                                      \u001B[49m\u001B[43mnum_images_per_prompt\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    140\u001B[0m target_image_embeds, target_negative_image_embeds \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mencode_image(target_image,\n\u001B[0;32m    141\u001B[0m                                                                       device,\n\u001B[0;32m    142\u001B[0m                                                                       batch_size,\n\u001B[0;32m    143\u001B[0m                                                                       num_images_per_prompt)\n\u001B[0;32m    145\u001B[0m \u001B[38;5;66;03m# Offload all models\u001B[39;00m\n",
-      "File \u001B[1;32m~\\anaconda3\\envs\\hands-tracking\\lib\\site-packages\\torch\\utils\\_contextlib.py:115\u001B[0m, in \u001B[0;36mcontext_decorator.<locals>.decorate_context\u001B[1;34m(*args, **kwargs)\u001B[0m\n\u001B[0;32m    112\u001B[0m \u001B[38;5;129m@functools\u001B[39m\u001B[38;5;241m.\u001B[39mwraps(func)\n\u001B[0;32m    113\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mdecorate_context\u001B[39m(\u001B[38;5;241m*\u001B[39margs, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs):\n\u001B[0;32m    114\u001B[0m     \u001B[38;5;28;01mwith\u001B[39;00m ctx_factory():\n\u001B[1;32m--> 115\u001B[0m         \u001B[38;5;28;01mreturn\u001B[39;00m func(\u001B[38;5;241m*\u001B[39margs, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs)\n",
-      "File \u001B[1;32mC:\\Folder\\WorkProjects\\Workspace\\image-merging\\models\\combined_pipeline.py:101\u001B[0m, in \u001B[0;36mCombinedPipeline.encode_image\u001B[1;34m(self, image, device, batch_size, num_images_per_prompt)\u001B[0m\n\u001B[0;32m     98\u001B[0m \u001B[38;5;66;03m# Offload all models\u001B[39;00m\n\u001B[0;32m     99\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mmaybe_free_model_hooks()\n\u001B[1;32m--> 101\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m image_emb, \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mprior_pipe\u001B[49m\u001B[38;5;241m.\u001B[39mget_zero_embed(batch_size)\n",
-      "File \u001B[1;32m~\\anaconda3\\envs\\hands-tracking\\lib\\site-packages\\diffusers\\configuration_utils.py:137\u001B[0m, in \u001B[0;36mConfigMixin.__getattr__\u001B[1;34m(self, name)\u001B[0m\n\u001B[0;32m    134\u001B[0m     deprecate(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mdirect config name access\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m1.0.0\u001B[39m\u001B[38;5;124m\"\u001B[39m, deprecation_message, standard_warn\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mFalse\u001B[39;00m)\n\u001B[0;32m    135\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_internal_dict[name]\n\u001B[1;32m--> 137\u001B[0m \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mAttributeError\u001B[39;00m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;132;01m{\u001B[39;00m\u001B[38;5;28mtype\u001B[39m(\u001B[38;5;28mself\u001B[39m)\u001B[38;5;241m.\u001B[39m\u001B[38;5;18m__name__\u001B[39m\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m object has no attribute \u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mname\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n",
-      "\u001B[1;31mAttributeError\u001B[0m: 'CombinedPipeline' object has no attribute 'prior_pipe'"
-     ]
+     "data": {
+      "text/plain": "  0%|          | 0/100 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "6f17a5cfdca2412e9f76d5a1b6ed78d1"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "pipe(source_image, target_image)"
+    "pipe(source_image, target_image).images[0].save('output.png')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-19T19:57:09.235692Z",
-     "end_time": "2023-10-19T19:57:09.250693Z"
+     "start_time": "2023-10-19T23:02:31.477342Z",
+     "end_time": "2023-10-19T23:03:05.025065Z"
     }
    }
   }
