--- a/notebooks/unclip.ipynb
+++ b/notebooks/unclip.ipynb
@@ -236,15 +236,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "outputs": [],
-   "source": [],
+   "source": [
+    "from datasets import load_dataset\n",
+    "\n",
+    "dataset = load_dataset('SaffalPoosh/deepFashion-with-masks')"
+   ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-19T21:29:27.254147Z",
-     "end_time": "2023-10-19T21:29:27.268143Z"
+     "start_time": "2023-10-20T03:29:09.487647Z",
+     "end_time": "2023-10-20T03:29:13.014905Z"
     }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "DatasetDict({\n    train: Dataset({\n        features: ['images', 'gender', 'pose', 'cloth_type', 'pid', 'caption', 'mask', 'mask_overlay'],\n        num_rows: 40658\n    })\n})"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-10-20T03:29:13.016404Z",
+     "end_time": "2023-10-20T03:29:13.021655Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
