fix: script for lora_dreambooth - training LoRA weights of img2img model

--- a/notebooks/finetune-model.ipynb
+++ b/notebooks/finetune-model.ipynb
@@ -7205,7 +7205,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -7213,8 +7213,8 @@
     "id": "u1-_duiMhyhQ",
     "outputId": "ea49ae6f-e15a-4b57-efb9-fd8454c38741",
     "ExecuteTime": {
-     "start_time": "2023-10-20T03:17:53.009407Z",
-     "end_time": "2023-10-20T03:17:53.012405Z"
+     "start_time": "2023-10-20T17:45:36.918855Z",
+     "end_time": "2023-10-20T17:45:36.936854Z"
     }
    },
    "outputs": [],
@@ -7247,58 +7247,17 @@
     "cellView": "form",
     "id": "uOI1Rbbqgs8c",
     "ExecuteTime": {
-     "start_time": "2023-10-20T03:17:53.015405Z",
-     "end_time": "2023-10-20T03:17:53.020660Z"
+     "start_time": "2023-10-20T17:45:36.940859Z",
+     "end_time": "2023-10-20T17:45:36.951751Z"
     }
    },
-   "execution_count": 13,
+   "execution_count": 2,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Folder\\WorkProjects\\Workspace\\image-merging\\inpaint_lora.py\", line 796, in <module>\n",
-      "    main()\n",
-      "  File \"C:\\Folder\\WorkProjects\\Workspace\\image-merging\\inpaint_lora.py\", line 466, in main\n",
-      "    image_encoder.to(accelerator.device, dtype=weight_dtype)\n",
-      "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\site-packages\\transformers\\modeling_utils.py\", line 2199, in to\n",
-      "    return super().to(*args, **kwargs)\n",
-      "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\site-packages\\torch\\nn\\modules\\module.py\", line 1145, in to\n",
-      "    return self._apply(convert)\n",
-      "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\site-packages\\torch\\nn\\modules\\module.py\", line 797, in _apply\n",
-      "    module._apply(fn)\n",
-      "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\site-packages\\torch\\nn\\modules\\module.py\", line 797, in _apply\n",
-      "    module._apply(fn)\n",
-      "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\site-packages\\torch\\nn\\modules\\module.py\", line 797, in _apply\n",
-      "    module._apply(fn)\n",
-      "  [Previous line repeated 3 more times]\n",
-      "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\site-packages\\torch\\nn\\modules\\module.py\", line 820, in _apply\n",
-      "    param_applied = fn(param)\n",
-      "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\site-packages\\torch\\nn\\modules\\module.py\", line 1143, in convert\n",
-      "    return t.to(device, dtype if t.is_floating_point() or t.is_complex() else None, non_blocking)\n",
-      "torch.cuda.OutOfMemoryError: CUDA out of memory. Tried to allocate 20.00 MiB (GPU 0; 6.00 GiB total capacity; 5.15 GiB already allocated; 0 bytes free; 5.37 GiB reserved in total by PyTorch) If reserved memory is >> allocated memory try setting max_split_size_mb to avoid fragmentation.  See documentation for Memory Management and PYTORCH_CUDA_ALLOC_CONF\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\runpy.py\", line 197, in _run_module_as_main\n",
-      "    return _run_code(code, main_globals, None,\n",
-      "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\runpy.py\", line 87, in _run_code\n",
-      "    exec(code, run_globals)\n",
-      "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\Scripts\\accelerate.exe\\__main__.py\", line 7, in <module>\n",
-      "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\site-packages\\accelerate\\commands\\accelerate_cli.py\", line 45, in main\n",
-      "    args.func(args)\n",
-      "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\site-packages\\accelerate\\commands\\launch.py\", line 979, in launch_command\n",
-      "    simple_launcher(args)\n",
-      "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\site-packages\\accelerate\\commands\\launch.py\", line 628, in simple_launcher\n",
-      "    raise subprocess.CalledProcessError(returncode=process.returncode, cmd=cmd)\n",
-      "subprocess.CalledProcessError: Command '['C:\\\\Users\\\\Alexey\\\\anaconda3\\\\envs\\\\hands-tracking\\\\python.exe', '../inpaint_lora.py', '--mixed_precision=fp16', '--pretrained_model_name_or_path=../models/weights/img2img-painting', '--dataset_name=SaffalPoosh/deepFashion-with-masks', '--output_dir=../models/weights/img2img-painting-lora', '--instance_prompt=a photo of <mska-clth> clothes on a model', '--class_prompt=a photo of clothes on a model', '--resolution=512', '--train_batch_size=1', '--gradient_accumulation_steps=3', '--gradient_checkpointing', '--learning_rate=0.0001', '--lr_scheduler=constant', '--lr_warmup_steps=0', '--max_train_steps=5000', '--use_8bit_adam']' returned non-zero exit status 1.\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "!accelerate launch ../inpaint_lora.py \\\n",
     "  --mixed_precision=\"fp16\" \\\n",
@@ -7313,15 +7272,18 @@
     "  --learning_rate={LEARNING_RATE} \\\n",
     "  --lr_scheduler={LR_SCHEDULER} \\\n",
     "  --lr_warmup_steps=0 \\\n",
-    "  --max_train_steps={MAX_TRAIN_STEPS} \\\n",
-    "  --use_8bit_adam\n",
+    "  --max_train_steps={MAX_TRAIN_STEPS}\n",
+    "  # --use_8bit_adam\n",
     "  # --with_prior_preservation --prior_loss_weight=1.0 \\\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-20T03:41:04.023606Z",
-     "end_time": "2023-10-20T03:41:32.384357Z"
+     "start_time": "2023-10-20T15:30:20.788596Z",
+     "end_time": "2023-10-20T15:31:04.835947Z"
+    },
+    "pycharm": {
+     "is_executing": true
     }
    }
   }
