fix: autograd for training

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -178,6 +178,30 @@
      "end_time": "2023-10-20T19:20:50.708708Z"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "FrozenDict([('in_channels', 3),\n            ('out_channels', 3),\n            ('down_block_types',\n             ['DownEncoderBlock2D',\n              'DownEncoderBlock2D',\n              'DownEncoderBlock2D',\n              'AttnDownEncoderBlock2D']),\n            ('up_block_types',\n             ['AttnUpDecoderBlock2D',\n              'UpDecoderBlock2D',\n              'UpDecoderBlock2D',\n              'UpDecoderBlock2D']),\n            ('block_out_channels', [128, 256, 256, 512]),\n            ('layers_per_block', 2),\n            ('act_fn', 'silu'),\n            ('latent_channels', 4),\n            ('sample_size', 32),\n            ('num_vq_embeddings', 16384),\n            ('norm_num_groups', 32),\n            ('vq_embed_dim', 4),\n            ('scaling_factor', 0.18215),\n            ('norm_type', 'spatial'),\n            ('_class_name', 'VQModel'),\n            ('_diffusers_version', '0.22.0.dev0'),\n            ('_name_or_path', '../models/weights/img2img-painting\\\\movq')])"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipe.movq.config"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-10-20T22:18:51.701434Z",
+     "end_time": "2023-10-20T22:18:51.721434Z"
+    }
+   }
   }
  ],
  "metadata": {
