fix: optimize imports

--- a/notebooks/finetune-model.ipynb
+++ b/notebooks/finetune-model.ipynb
@@ -7219,7 +7219,9 @@
    },
    "outputs": [],
    "source": [
-    "# !pip install git+https://github.com/huggingface/diffusers transformers xformers accelerate controlnet_aux datasets"
+    "# !pip install git+https://github.com/huggingface/diffusers transformers accelerate datasets\n",
+    "# !pip install git+https://github.com/Navu45/image-merging.git\n",
+    "# !pip install kornia"
    ]
   },
   {
@@ -7227,7 +7229,7 @@
    "source": [
     "#@markdown Model params\n",
     "#@markdown ---\n",
-    "PATH = '../models/weights/img2img-painting' #@param{type: 'string'}\n",
+    "PATH = 'kandinsky-community/kandinsky-2-2-decoder-inpaint' #@param{type: 'string'}\n",
     "OUTPUT_DIR = \"../models/weights/img2img-painting-lora\" #@param{type: 'string'}\n",
     "DATASET_DIR = 'SaffalPoosh/deepFashion-with-masks'\n",
     "INSTANCE_DIR = \"../data/clothes_dataset/instance\" # @param {type:\"string\"}\n",
@@ -7238,9 +7240,9 @@
     "#@markdown ---\n",
     "RESOLUTION = \"512\" #@param{type: 'string'}\n",
     "MIXED_PRECISION = \"fp16\" #@param{type: 'string'}\n",
-    "TRAIN_BATCH_SIZE = 1 #@param {type:\"slider\", min:1, max:4, step:1}\n",
-    "MAX_TRAIN_STEPS = 5000 #@param {type:\"number\"}\n",
-    "LEARNING_RATE = 1e-4  #@param {type:\"number\"}\n",
+    "TRAIN_BATCH_SIZE = 1 #@param {type:\"slider\", min:1, max:6, step:1}\n",
+    "MAX_TRAIN_STEPS = 1500 #@param {type:\"number\"}\n",
+    "LEARNING_RATE = 1e-5  #@param {type:\"number\"}\n",
     "LR_SCHEDULER = \"constant\" #@param{type: 'string'}"
    ],
    "metadata": {
@@ -7792,14 +7794,14 @@
     "  --instance_prompt=\"a photo of <mska-clth> clothes on a model\" \\\n",
     "  --class_prompt=\"a photo of clothes on a model\" \\\n",
     "  --resolution={RESOLUTION} \\\n",
-    "  --train_batch_size=1 \\\n",
-    "  --gradient_accumulation_steps=3 --gradient_checkpointing\\\n",
+    "  --train_batch_size={TRAIN_BATCH_SIZE} \\\n",
+    "  --gradient_accumulation_steps=2 --gradient_checkpointing \\\n",
     "  --learning_rate={LEARNING_RATE} \\\n",
     "  --lr_scheduler={LR_SCHEDULER} \\\n",
     "  --lr_warmup_steps=0 \\\n",
     "  --max_train_steps={MAX_TRAIN_STEPS}\n",
-    "  # --use_8bit_adam\n",
-    "  # --with_prior_preservation --prior_loss_weight=1.0 \\\n"
+    "#   --resume_from_checkpoint='latest'\n",
+    "  # --with_prior_preservation --prior_loss_weight=1.0 \\"
    ],
    "metadata": {
     "collapsed": false,
